--- a/Nostradamus/Nostradamus.csproj
+++ b/Nostradamus/Nostradamus.csproj
@@ -5,6 +5,18 @@
     <AWSProjectType>Lambda</AWSProjectType>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Migrations\20200131144946_AddPresidentialPrediction.cs" />
+    <Compile Remove="Migrations\20200131144946_AddPresidentialPrediction.Designer.cs" />
+    <Compile Remove="Migrations\20200131145048_AddPresidentialPrediction.cs" />
+    <Compile Remove="Migrations\20200131145048_AddPresidentialPrediction.Designer.cs" />
+    <Compile Remove="Migrations\20200131150051_AddPresidentialPrediction.cs" />
+    <Compile Remove="Migrations\20200131150051_AddPresidentialPrediction.Designer.cs" />
+    <Compile Remove="Migrations\20200201154334_PresidentialPrediction.cs" />
+    <Compile Remove="Migrations\20200201154334_PresidentialPrediction.Designer.cs" />
+    <Compile Remove="Migrations\20200201154658_PresidentialPrediction.cs" />
+    <Compile Remove="Migrations\20200201154658_PresidentialPrediction.Designer.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="AWSSDK.S3" Version="3.3.102.15" />
